Add category Swagger documentation
